--- a/.github/workflows/cosmic-aarch64.yml
+++ b/.github/workflows/cosmic-aarch64.yml
@@ -1,7 +1,7 @@
 name: "COSMIC AArch64 Live ISO"
 on:
-  schedule:
-    - cron: "0 22 * * *"
+#  schedule:
+#    - cron: "0 22 * * *"
   workflow_dispatch:
 
 jobs:
