--- a/.github/workflows/cosmic-aarch64.yml
+++ b/.github/workflows/cosmic-aarch64.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: [linux, ARM64]
+    runs-on: [linux, ARM64, EC2-R7gLarge]
 
     steps:
       - uses: actions/checkout@v4.1.4
