--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -7,6 +7,7 @@ pull_request_rules:
       - label=dependencies
 
       - check-success=COSMIC x86_64 Live ISO
+      - check-success=COSMIC AArch64 Live ISO
     actions:
       merge:
         method: squash
