Fix Flake updates not triggering new builds

--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -28,5 +28,5 @@ jobs:
       - uses: benc-uk/workflow-dispatch@v1
         if: ${{ contains(fromJSON('["created", "updated"]'), steps.update-flake-lock.outputs.pull-request-operation) }}
         with:
-          workflow: ci.yml
+          workflow: cosmic.yml
           ref: refs/heads/update_flake_lock_action
