--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -10,5 +10,5 @@ pull_request_rules:
       - check-success=COSMIC AArch64 Live ISO
     actions:
       merge:
-        method: squash
+        method: rebase
       delete_head_branch:
