Fail if no artifact is found for upload

--- a/.github/workflows/cosmic.yml
+++ b/.github/workflows/cosmic.yml
@@ -54,3 +54,4 @@ jobs:
           name: ${{ env.ISO_NAME }}
           path: ${{ env.ISO_FILE }}
           compression-level: 0
+          if-no-files-found: error
