--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -2,7 +2,8 @@ name: Flake
 
 on:
   schedule:
-    - cron: '0 7 * * *'
+#    - cron: '0 7 * * *'
+    - cron: '0 13 * * *' # Six hours after upstream
   workflow_dispatch:
 
 jobs:
