Pull from our own Cachix cache

--- a/.github/workflows/cosmic.yml
+++ b/.github/workflows/cosmic.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           name: drakon64-nixos-cosmic-iso
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-          extraPullNames: cosmic
+          extraPullNames: cosmic, drakon64-nixos-cosmic
 
       - env:
           SYSTEM: ${{ matrix.architecture.system }}
