--- a/.github/workflows/cosmic.yml
+++ b/.github/workflows/cosmic.yml
@@ -6,12 +6,14 @@ on:
     paths:
       - flake.nix
       - flake.lock
+      - .github/workflows/*.yml
   pull_request:
     branches:
       - main
     paths:
       - flake.nix
       - flake.lock
+      - .github/workflows/*.yml
   workflow_dispatch:
 
 jobs:
