--- a/.github/workflows/cosmic.yml
+++ b/.github/workflows/cosmic.yml
@@ -6,13 +6,13 @@ on:
     paths:
       - flake.nix
       - flake.lock
-      - .github/workflows/*.yml
+      - .github/workflows/cosmic.yml
   pull_request:
     branches:
       - main
     paths:
       - flake.nix
-      - .github/workflows/*.yml
+      - .github/workflows/cosmic.yml
   workflow_dispatch:
 
 jobs:
@@ -49,6 +49,7 @@ jobs:
           ISO_FILE=(result/iso/*.iso)
           echo ISO_FILE=$ISO_FILE >> $GITHUB_ENV
           echo ISO_NAME=$(echo "$ISO_FILE" | sed -e 's/result\/iso\///' -e 's/.iso$//') >> $GITHUB_ENV
+        if: github.ref == 'refs/heads/main'
 
       - uses: actions/upload-artifact@v4
         with:
@@ -56,3 +57,4 @@ jobs:
           path: ${{ env.ISO_FILE }}
           compression-level: 0
           if-no-files-found: error
+        if: github.ref == 'refs/heads/main'
