Remove some Nix binary caches

--- a/.github/workflows/cosmic.yml
+++ b/.github/workflows/cosmic.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           name: drakon64-nixos-cosmic-iso
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-          extraPullNames: cosmic, drakon64-nixos-cosmic
+          extraPullNames: cosmic
 
       - env:
           SYSTEM: ${{ matrix.architecture.system }}
