Reduce build log verbosity

--- a/.github/workflows/cosmic.yml
+++ b/.github/workflows/cosmic.yml
@@ -43,7 +43,7 @@ jobs:
 
       - env:
           SYSTEM: ${{ matrix.architecture.system }}
-        run: nix -vL build --system "$SYSTEM" .#cosmicIso.closure
+        run: nix build --system "$SYSTEM" .#cosmicIso.closure
 
       - run: |
           ISO_FILE=(result/iso/*.iso)
