--- a/.github/workflows/cosmic.yml
+++ b/.github/workflows/cosmic.yml
@@ -21,10 +21,10 @@ jobs:
       matrix:
         architecture:
           - system: x86_64-linux
-            runner: [ linux, X64, drakon64/github-actions-runner-aws, EC2-r7a.large, EBS-30GB ]
+            runner: ubuntu-latest
             name: x86_64
           - system: aarch64-linux
-            runner: [ linux, ARM64, drakon64/github-actions-runner-aws, EC2-r8g.large, EBS-30GB ]
+            runner: [ linux, ARM64, drakon64/github-actions-runner-aws, EC2-c7g.xlarge, EBS-30GB ]
             name: AArch64
 
     name: COSMIC ${{ matrix.architecture.name }} Live ISO
