--- a/.github/workflows/cosmic.yml
+++ b/.github/workflows/cosmic.yml
@@ -24,7 +24,7 @@ jobs:
             runner: ubuntu-latest
             name: x86_64
           - system: aarch64-linux
-            runner: [ linux, ARM64, self-hosted, ktisis, ktisis-c4a-highcpu-4, ktisis-30GB ]
+            runner: ubuntu-24.04-arm
             name: AArch64
 
     name: COSMIC ${{ matrix.architecture.name }} Live ISO
